<resources>
    <string name="app_name">Kisan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name_in_app">Kisan</string>
    <string name="action_settings">Settings</string>
    <string name="select_location">Select Location</string>
    <string name="change_photo">Tap to change Photo</string>
    <string name="loading..">loading...</string>
    <string name="name">Name:</string>
    <string name="type_full_name">Type your full name</string>
    <string name="email">Email:</string>
    <string name="tyoe_email_hint">Type your email address</string>
    <string name="phone">Phone:</string>
    <string name="type_phone">Type your phone number</string>
    <string name="website">Website:</string>
    <string name="website_address">ex: http://mywebsite.com</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="my_ads">My Ads</string>
    <string name="title...">Title......</string>
    <string name="description...">Description.......</string>
    <string name="title_post">Title:</string>
    <string name="title_post_hint">Wheat for sale</string>
    <string name="category">Category:</string>
    <string name="price">Price:</string>
    <string name="price_hint">ex: 1000 PKR</string>
    <string name="post_description">Description</string>
    <string name="type_des_hint">Type description here...</string>
    <string name="adress">Address</string>
    <string name="adress_hint">ex:Teh Kabirawal,Dist Khanewal</string>
    <string name="images">IMAGES</string>
    <string name="post_ad">POST ADD</string>
    <string name="delet_add">DELETE THIS ADD</string>
    <string name="tap_icon">Tap on the icons to upload images</string>
    <string name="price_pkr">PRICE: 0 PKR</string>
    <string name="add_description">DESCRIPTION</string>
    <string name="adrs_loading">ADDRESS: loading..</string>
    <string name="posted_by">ADDRESS: loading..</string>
    <string name="web_loading">WEBSITE: loading...</string>
    <string name="open_in_map">Open in Map</string>
    <string name="contact_advertiser">CONTACT THE ADVERTISER</string>
    <string name="message">Message*:</string>
    <string name="message_hint">Type your message...</string>
    <string name="your_name">Your Name*:</string>
    <string name="type_your_name_hint">Type your name</string>
    <string name="your_email_adrs">Your email address:</string>
    <string name="email_adrs_hint">Type your email address</string>
    <string name="your_phone">Your Phone*:</string>
    <string name="type_phone_hint">Type your phone number</string>
    <string name="send_message">Send Message</string>
    <string name="make_phone_call">Make a Phone Call</string>
    <string name="tap_to_close">Tap to close</string>
    <string name="total_acres">Acres:</string>
    <string name="total_acrs_hint">Type total acres e.g 25</string>
    <string name="month">Month:</string>
    <string name="select_month_year">Select Month and year</string>
    <string name="location">Location</string>
    <string name="type_location_hint">Type your Location</string>
    <string name="or_text">OR</string>
    <string name="select_from_map">SELECT FROM MAP</string>
    <string name="suggeston_title">Suggestion</string>



    <array name="category_type">
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Flowers</item>
        <item>Seeds</item>

    </array>
    <array name="sub_category_type">
        <item>Pear Millet</item>
        <item>Rice</item>
        <item>Wheat</item>
        <item>Sorghum</item>

    </array>
    <string name="title_activity_maps">Map</string>
    <string name="suggestion">You need to grow wheat as it is perfectly suits on your area</string>
    <string name="seed">You need to use 30 kg per acre as it is it will increase production
    </string>
    <string name="category_prompt">Choose Category</string>
    <string-array name="category_arrays">
        <item>Crop</item>
        <item>Food</item>
        <item>Organic</item>
    </string-array>


    <string name="Product_prompt">Choose a Product</string>
    <string-array name="Product_arrays">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string name="sel_crops_menu">Sell Crops</string>
    <string name="buy_crops_menu">Buy Crops</string>
    <string name="agri_sug_menu">Agri Suggestion</string>
    <string name="suggestion_menu">Suggestions</string>
    <string name="account_menue">Account</string>
    <string name="share">Share</string>
    <string name="crops_title">Crops</string>
</resources>
