<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatarImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatarImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/change_photo"
        android:textIsSelectable="false"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/acUsernameTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/loading.."
        android:textAlignment="center"
        android:textColor="#222"
        android:textSize="12dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/acUsernameTxt"
        android:layout_marginTop="19dp"
        android:gravity="center_vertical"
        android:text="name"
        android:textColor="#222"
        android:textSize="14dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/acFullnameTxt"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/acUsernameTxt"
        android:layout_alignTop="@+id/textView12"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/textView12"
        android:hint="@string/type_full_name"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textColor="#222"
        android:textSize="14dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/acEmailTxt"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/acFullnameTxt"
        android:layout_alignTop="@+id/textView13"
        android:hint="@string/tyoe_email_hint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/phone"
        android:textColor="#222"
        android:textSize="14dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/acPhoneTxt"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/acEmailTxt"
        android:layout_alignTop="@+id/textView14"
        android:hint="@string/type_phone"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:singleLine="true"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView14"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/website"
        android:textColor="#222"
        android:textSize="14dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/acWebsiteTxt"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/acPhoneTxt"
        android:layout_below="@+id/acPhoneTxt"
        android:layout_marginTop="5dp"
        android:hint="@string/website_address"
        android:imeOptions="actionDone"
        android:inputType="textWebEditText"
        android:singleLine="true"
        android:textSize="11dp" />


    <Button
        android:id="@+id/saveProfileButt"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView15"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/save_profile"
        android:textColor="#fff" />

    <Button
        android:id="@+id/myAdsButt"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/saveProfileButt"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/my_ads"
        android:textColor="#fff" />


</RelativeLayout>
