<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/adTitleTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/title_post"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo" />

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo" />

                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_gravity="right"
                        android:layout_marginStart="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo" />

                </LinearLayout>
            </HorizontalScrollView>


            <TextView
                android:id="@+id/priceTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/price_pkr"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/add_description"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white"
                android:text="@string/loading.."
                android:textSize="12dp" />

            <TextView
                android:id="@+id/addressTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:text="@string/adrs_loading"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/postedByTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/posted_by"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/websiteTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/web_loading"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/mapWebView"
                android:layout_width="fill_parent"
                android:layout_height="260dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.42"
                android:name="com.google.android.gms.maps.SupportMapFragment" />
            <Button
                android:id="@+id/openMapsButt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/open_in_map"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="#c95b60"
                android:gravity="center_vertical"
                android:text="@string/contact_advertiser"
                android:textAlignment="center"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/message"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/messageTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="5dp"
                android:hint="@string/message_hint"
                android:textColor="@android:color/white"
                android:imeOptions="actionNext"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/your_name"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="5dp"
                android:hint="@string/type_your_name_hint"
                android:textColor="@android:color/white"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/your_email_adrs"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailAddTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="5dp"
                android:hint="@string/email_adrs_hint"
                android:imeOptions="actionNext"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/your_phone"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:hint="@string/type_phone_hint"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:textColor="@android:color/white"
                android:singleLine="true"
                android:textSize="12dp" />

            <Button
                android:id="@+id/sendMessButt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/send_message" />

            <Button
                android:id="@+id/makeCallButt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/make_phone_call" />


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/prevLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2000dp"
        android:background="#222"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tap_to_close"
            android:textAlignment="center"
            android:textColor="#f1f1f1"
            android:textSize="12dp" />

        <ImageView
            android:id="@+id/prevImg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />
    </LinearLayout>


</RelativeLayout>
